--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -46,8 +46,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.6
-javac.target=1.6
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -75,7 +75,7 @@ main.class=com.github.somprasongd.edc.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.6_x86
+platform.active=OpenJDK_8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
